Création du header / responsivité header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
 
 <body>
     <div class="main-container">
-        <header></header>
+        <header>
+            <section class="header-logo">
+                <img src="images/logo/Booki.png" alt="logo booki" class="logo">
+            </section>
+            <nav class="menu">
+                <a href="#" class="menu-btn">hébergements</a>
+                <a href="#" class="menu-btn">Activités</a>
+            </nav>
+        </header>
+
         <main>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
