--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -18,7 +18,7 @@
     <div class="main-container">
         <header>
             <section class="header-logo">
-                <img src="images/logo/Booki.png" alt="logo booki" class="logo">
+                <img src="images/logo/Booki.png" alt="logo booki" class="logo-png">
             </section>
             <nav class="menu">
                 <a href="#" class="menu-btn">hébergements</a>
@@ -27,6 +27,40 @@
         </header>
 
         <main>
+            <section class="info-group">
+                <div class="info-group-headline">
+                    <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
+                    <p>En plein centre-ville ou en pleine nature</p>
+                </div>
+                <form action="#" method="GET" class="info-group-search-bar">
+                    <img src="images/logo/map-maker.svg" alt="logo-map">
+                    <input type="text" class="search-input" placeholder="Marseille, France">
+                    <button type="submit" class="search-button">Rechercher</button>
+                </form>
+                <div class="info-group-filter">
+                    <h2>Filtres</h2>
+                    <div class="box-filter">
+                        <i class="fa-solid fa-money-bill-wave"></i>
+                        <span>Économique</span>
+                    </div>
+                    <div class="box-filter">
+                        <i class="fa-solid fa-person"></i>
+                        <span>Familial</span>
+                    </div>
+                    <div class="box-filter">
+                        <i class="fa-solid fa-heart"></i>
+                        <span>romantique</span>
+                    </div>
+                    <div class="box-filter">
+                        <i class="fa-solid fa-fire"></i>
+                        <span>Nos pépite</span>
+                    </div>
+                </div>
+                <div class="info-group-info-bar">
+                    <img src="images/logo/I.svg" alt="logo-info">
+                    <span>Plus de 500 logements sont disponibles dans cette ville</span>
+                </div>
+            </section>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
 
