--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <body>
     <div class="main-container">
         <header>
-            <section class="header-logo">
+            <span class="header-logo">
                 <img src="images/logo/Booki.png" alt="logo booki" class="logo-png">
-            </section>
+            </span>
             <nav class="menu">
                 <a href="#" class="menu-btn">hébergements</a>
                 <a href="#" class="menu-btn">Activités</a>
@@ -34,26 +34,28 @@
                 </div>
                 <form action="#" method="GET" class="info-group-search-bar">
                     <img src="images/logo/map-maker.svg" alt="logo-map">
-                    <input type="text" class="search-input" placeholder="Marseille, France">
+                    <input type="text" class="search-input" name="research" placeholder="Marseille, France">
                     <button type="submit" class="search-button">Rechercher</button>
                 </form>
                 <div class="info-group-filter">
                     <h2>Filtres</h2>
-                    <div class="box-filter">
-                        <i class="fa-solid fa-money-bill-wave"></i>
-                        <span>Économique</span>
-                    </div>
-                    <div class="box-filter">
-                        <i class="fa-solid fa-person"></i>
-                        <span>Familial</span>
-                    </div>
-                    <div class="box-filter">
-                        <i class="fa-solid fa-heart"></i>
-                        <span>romantique</span>
-                    </div>
-                    <div class="box-filter">
-                        <i class="fa-solid fa-fire"></i>
-                        <span>Nos pépite</span>
+                    <div class="info-group-box">
+                        <button class="box-filter">
+                            <i class="fa-solid fa-money-bill-wave"></i>
+                            <span>Économique</span>
+                        </button>
+                        <button class="box-filter">
+                            <i class="fa-solid fa-person"></i>
+                            <span>Familial</span>
+                        </button>
+                        <button class="box-filter">
+                            <i class="fa-solid fa-heart"></i>
+                            <span>romantique</span>
+                        </button>
+                        <button class="box-filter">
+                            <i class="fa-solid fa-fire"></i>
+                            <span>Nos pépite</span>
+                        </button>
                     </div>
                 </div>
                 <div class="info-group-info-bar">
