Intégration et style du bouton de recherche pour la version mobile - Prochaine étape modification des media screen

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                 <form action="#" method="GET" class="info-group-search-bar">
                     <img src="images/logo/map-maker.svg" alt="logo-map">
                     <input type="text" class="search-input" name="research" placeholder="Marseille, France">
-                    <button type="submit" class="search-button">Rechercher</button>
+                    <button type="submit" class="search-button-desktop">Rechercher</button>
+                    <button type="submit" class="search-button-mobile"><i class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
                 <div class="info-group-filter">
                     <h2>Filtres</h2>
