--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <span>Plus de 500 logements sont disponibles dans cette ville</span>
           </div>
         </section>
-        <div class="hebergements-and-populaires">
+        <section class="hebergements-and-populaires">
           <section class="hebergements">
             <h2 class="hebergements-title">Hébergements à Marseille</h2>
             <div class="hebergements-cards">
@@ -313,7 +313,7 @@
                   </div>
                 </article>
               </a>
-              <a href="#" class="populaires-link">
+              <a href="#" >
                 <article class="populaires-card">
                   <img
                     src="./images/hebergements/blanc.jpg"
@@ -342,7 +342,7 @@
               </a>
             </div>
           </section>
-        </div>
+        </section>
       </main>
       <footer></footer>
     </div>
