Partie activité et footer OK, responsive OK.

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                   </div>
                 </article>
               </a>
-              <a href="#" >
+              <a href="#">
                 <article class="populaires-card">
                   <img
                     src="./images/hebergements/blanc.jpg"
@@ -343,8 +343,50 @@
             </div>
           </section>
         </section>
+        <section class="activite">
+          <h2 class="activite-title">Activité à Marseille</h2>
+          <div class="activite-cards">
+            <a href="#" class="activite-link"
+              ><article class="activite-card">
+                <img src="images/activites/vieux-port.jpg" alt="Vieux-port" />
+                <h3 class="activite-card-subtitle">Vieux-port</h3></article
+            ></a>
+            <a href="#" class="activite-link"
+              ><article class="activite-card">
+                <img src="images/activites/pomegues.jpg" alt="Fort de Pomègues" />
+                <h3 class="activite-card-subtitle">Fort de Pomègues</h3></article
+            ></a>
+            <a href="#" class="activite-link"
+              ><article class="activite-card">
+                <img src="images/activites/calanques.jpg" alt="Parc national des Calanques" />
+                <h3 class="activite-card-subtitle">Parc national des Calanques</h3></article
+            ></a>
+            <a href="#" class="activite-link"
+              ><article class="activite-card">
+                <img src="images/activites/notre-dame.jpg" alt="Notre-Dame-de-la-Garde" />
+                <h3 class="activite-card-subtitle">Notre-Dame-de-la-Garde</h3></article
+            ></a>
+          </div>
+        </section>
       </main>
-      <footer></footer>
+      <footer>
+        <div class="footer-information">
+            <h3 class="footer-title">À propos</h3>
+            <a href="#">Fonctionnement du site</a>
+            <a href="#">Conditions générales</a>
+            <a href="#">Données et confidentialité</a>
+        </div>
+        <div class="footer-information">
+            <h3 class="footer-title">Nos hébergements</h3>
+            <a href="#">Charte qualité</a>
+            <a href="#">Proposer votre hôtel</a>
+        </div>
+        <div class="footer-information">
+            <h3 class="footer-title">Assistance</h3>
+            <a href="#">Centre d'aide</a>
+            <a href="#">Nous contacter</a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
