--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </span>
         <nav class="header-menu">
           <a href="#hebergements" class="header-menu-btn">hébergements</a>
-          <a href="#populaires" class="header-menu-btn">Activités</a>
+          <a href="#activite" class="header-menu-btn">Activités</a>
         </nav>
       </header>
 
@@ -251,7 +251,7 @@
           </section>
           <section class="populaires">
             <div class="populaires-section-title">
-              <h2 id="populaires" class="populaires-title">Les plus populaires</h2>
+              <h2 class="populaires-title">Les plus populaires</h2>
               <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
             </div>
             <div class="populaires-cards">
@@ -344,7 +344,7 @@
           </section>
         </section>
         <section class="activite">
-          <h2 class="activite-title">Activité à Marseille</h2>
+          <h2 id="activite" class="activite-title">Activité à Marseille</h2>
           <div class="activite-cards">
             <a href="#" class="activite-link"
               ><article class="activite-card">
