Correction d'après sessions de mentorat, ajout de deux breakpoints.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
     <div class="main-container">
       <header>
         <span class="header-logo">
-          <img src="images/logo/Booki.png" alt="logo booki" class="header-logo-png" />
+          <img
+            src="images/logo/Booki.png"
+            alt="logo booki"
+            class="header-logo-png"
+          />
         </span>
         <nav class="header-menu">
           <a href="#hebergements" class="header-menu-btn">hébergements</a>
@@ -35,7 +39,7 @@
       <main>
         <section class="info-group">
           <div class="info-group-headline">
-            <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
+            <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
             <p>En plein centre-ville ou en pleine nature</p>
           </div>
           <form action="#" method="GET" class="info-group-search-bar">
@@ -81,7 +85,9 @@
         </section>
         <section class="hebergements-and-populaires">
           <section class="hebergements">
-            <h2 id="hebergements" class="hebergements-title">Hébergements à Marseille</h2>
+            <h2 id="hebergements" class="hebergements-title">
+              Hébergements à Marseille
+            </h2>
             <div class="hebergements-cards">
               <a href="#" class="hebergements-link">
                 <article class="hebergements-card">
@@ -349,42 +355,57 @@
             <a href="#" class="activite-link"
               ><article class="activite-card">
                 <img src="images/activites/vieux-port.jpg" alt="Vieux-port" />
-                <h3 class="activite-card-subtitle">Vieux-port</h3></article
-            ></a>
+                <h3 class="activite-card-subtitle">Vieux-port</h3>
+              </article></a
+            >
             <a href="#" class="activite-link"
               ><article class="activite-card">
-                <img src="images/activites/pomegues.jpg" alt="Fort de Pomègues" />
-                <h3 class="activite-card-subtitle">Fort de Pomègues</h3></article
-            ></a>
+                <img
+                  src="images/activites/pomegues.jpg"
+                  alt="Fort de Pomègues"
+                />
+                <h3 class="activite-card-subtitle">Fort de Pomègues</h3>
+              </article></a
+            >
             <a href="#" class="activite-link"
               ><article class="activite-card">
-                <img src="images/activites/calanques.jpg" alt="Parc national des Calanques" />
-                <h3 class="activite-card-subtitle">Parc national des Calanques</h3></article
-            ></a>
+                <img
+                  src="images/activites/calanques.jpg"
+                  alt="Parc national des Calanques"
+                />
+                <h3 class="activite-card-subtitle">
+                  Parc national des Calanques
+                </h3>
+              </article></a
+            >
             <a href="#" class="activite-link"
               ><article class="activite-card">
-                <img src="images/activites/notre-dame.jpg" alt="Notre-Dame-de-la-Garde" />
-                <h3 class="activite-card-subtitle">Notre-Dame-de-la-Garde</h3></article
-            ></a>
+                <img
+                  src="images/activites/notre-dame.jpg"
+                  alt="Notre-Dame-de-la-Garde"
+                />
+                <h3 class="activite-card-subtitle">Notre-Dame-de-la-Garde</h3>
+              </article></a
+            >
           </div>
         </section>
       </main>
       <footer>
         <div class="footer-information">
-            <h3 class="footer-title">À propos</h3>
-            <a href="#">Fonctionnement du site</a>
-            <a href="#">Conditions générales</a>
-            <a href="#">Données et confidentialité</a>
+          <h3 class="footer-title">À propos</h3>
+          <a href="#">Fonctionnement du site</a>
+          <a href="#">Conditions générales</a>
+          <a href="#">Données et confidentialité</a>
         </div>
         <div class="footer-information">
-            <h3 class="footer-title">Nos hébergements</h3>
-            <a href="#">Charte qualité</a>
-            <a href="#">Proposer votre hôtel</a>
+          <h3 class="footer-title">Nos hébergements</h3>
+          <a href="#">Charte qualité</a>
+          <a href="#">Proposer votre hôtel</a>
         </div>
         <div class="footer-information">
-            <h3 class="footer-title">Assistance</h3>
-            <a href="#">Centre d'aide</a>
-            <a href="#">Nous contacter</a>
+          <h3 class="footer-title">Assistance</h3>
+          <a href="#">Centre d'aide</a>
+          <a href="#">Nous contacter</a>
         </div>
       </footer>
     </div>
